--- a/pyindex.html
+++ b/pyindex.html
@@ -22,7 +22,7 @@
         #gesture_output {
             display: none;
             position: absolute;
-            bottom: 10px;
+            bottom: 100px;
             left: 10px;
             color: white;
             background-color: rgba(0, 0, 0, 0.7);
@@ -46,7 +46,8 @@
 <body>
     <video id="webcam" autoplay playsinline></video>
     <canvas id="output_canvas"></canvas>
-    <div id="gesture_output"></div><br>
+    <div> Like / Dislike / 1 / 2 / Close / Submit</div><br>
+    <div id="gesture_output"></div>
     <button id="webcamButton">ENABLE PREDICTIONS</button>
 
     <script type="module">
