--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
               <img src="assets/img/Like.jpg" alt="Like Gesture">
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
             </div>
-            <video id="video" width="320" height="240" autoplay playsinline style="text-align: center;"></video>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-            <div id="finger-msg"></div>
+             <video id="webcam" autoplay playsinline></video>
+            <canvas id="output_canvas"></canvas>
+            <div> Like / Dislike / 1 / 2 / Close / Submit</div><br>
+            <div id="gesture_output"></div>
           </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
