--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-             <!--<video id="webcam" autoplay playsinline></video>
-            <canvas id="output_canvas"></canvas>-->
+            <video id="webcam" autoplay playsinline hidden></video>
+            <canvas id="output_canvas" hidden></canvas>
             <div> Like / Dislike / 1 / 2 / Close / Submit</div><br>
             <div id="gesture_output"></div>
           </div>
