--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           <script>
             function showDiv(divId) {
-              const divs = ['main_gesture', 'star_gesture', 'voice_gesture', 'thank_you'];
+              const divs = ['main_gesture', 'star_gesture', 'voice_gesture', 'thank_youUU'];
               divs.forEach(id => {
                 const div = document.getElementById(id);
                 if (id === divId) {
