--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
           </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
-              <img src="assets/img/stars2.JPG" alt="stars Gesture">
+              <img src="assets/img/stars3.png" alt="stars Gesture">
             </div>
             <div class="LDimage-container">
-              <img src="assets/img/numbers2.JPG" alt="stars Gesture">
+              <img src="assets/img/numbers3.png" alt="stars Gesture">
             </div>
           </div>
           <div id="voice_gesture" style="display: none;">Voice feedback</div>
