--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
-              <img src="assets/img/star.png" alt="stars Gesture">
+              <img src="assets/img/stars.png" alt="stars Gesture">
             </div>
             <div class="LDimage-container">
               <img src="assets/img/number.png" alt="stars Gesture">
