--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <!-- Home Section -->
     <section id="Home_page" class="hero section dark-background">
-      <img src="assets/img/hero-bg.g" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>HCI MediaPipe</h2>
         </br>
