--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <div id="gesture_output"></div>
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-            <video id="webcam" autoplay playsinline hidden></video>
+            <video id="webcam" autoplay playsinline></video>
             <canvas id="output_canvas" hidden></canvas>
             
           </div>
