--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
           </div>
         </div>
         <div class="modalx-body">
+          <div>
+            <video id="webcam" autoplay playsinline></video>
+            <canvas id="output_canvas" hidden></canvas>
+          </div>
           <div id="main_gesture">
             <div class="LDimage-container">
               <img src="assets/img/Like.jpg" alt="Like Gesture">
@@ -86,8 +90,7 @@
               <div id="gesture_output"></div>
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-            <video id="webcam" autoplay playsinline></video>
-            <canvas id="output_canvas" hidden></canvas>
+
             
           </div>
           <div id="star_gesture" style="display: none;">
