--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <div class="LDimage-container">
               <img src="assets/img/Like.jpg" alt="Like Gesture">
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
+              <video id="webcam" autoplay playsinline></video>
+              <canvas id="output_canvas"></canvas>
               <div id="gesture_output"></div>
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
