--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="modalx-body">
-          <div>
+          <div class="webcam-container">
             <video id="webcam" autoplay playsinline></video>
             <canvas id="output_canvas" hidden></canvas>
           </div>
