--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="modalx-body">
           <div>
             <video id="webcam" autoplay playsinline></video>
-            <canvas id="output_canvas" hidden></canvas>
+            <canvas id="output_canvas"></canvas>
           </div>
           <div id="main_gesture">
             <div class="LDimage-container">
