--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
           <div>
             <h4>Please give us your Gesture feedback</h4>
             <hr>
-           <!-- <video id="webcam" autoplay playsinline></video>
-            <canvas id="output_canvas"></canvas>-->
-<video id="webcam" width="320" height="180" autoplay playsinline></video>
-<canvas id="output_canvas" width="320" height="180"></canvas>
           </div>
         </div>
         <div class="modalx-body">
+          <div class="webcam-container">
+            <video id="webcam" width="320" height="180" autoplay playsinline></video>
+            <canvas id="output_canvas" width="320" height="180"></canvas>
+          </div>
           <div id="main_gesture">
             <div class="LDimage-container">
               <img src="assets/img/Like.jpg" alt="Like Gesture">
