--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
       <div>
         <h4>Please give us your Gesture feedback</h4>
         <hr>
+        <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
+        <script type="module" src="assets/MediaPipe_lib/div_actions.js"></script>
         <video id="webcam" width="480" height="360" autoplay playsinline></video>
         <canvas id="output_canvas" width="480" height="360"></canvas>
       </div>
