--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <canvas id="output_canvas" width="480" height="360"></canvas>
 </div>
       <div id="main_gesture">
-        <div id="gesture_output"></div>
+       <div class="actionbox"> <div id="gesture_output"></div></div>
         <div class="LDimage-container">
           <img src="assets/img/Like.jpg" alt="Like Gesture">
           <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
