--- a/index.html
+++ b/index.html
@@ -70,29 +70,30 @@
 
     <!-- Pop-up section-->
     <div id="survey_popup" class="modalx">
-  <div class="modalx-content">
-    <div class="modalx-header">
-      <span class="closex">&times;</span>
-      <div>
-        <h4>Please give us your Gesture feedback</h4>
-        <hr>
-        <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-        <script type="module" src="assets/MediaPipe_lib/div_actions.js"></script>
-        <video id="webcam" width="480" height="360" autoplay playsinline></video>
-        <canvas id="output_canvas" width="480" height="360"></canvas>
-      </div>
-    </div>
-    <div class="modalx-body">
-      <div id="main_gesture">
-        <div class="LDimage-container">
-          <img src="assets/img/Like.jpg" alt="Like Gesture">
-          <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
-          <div id="gesture_output"></div>
+      <div class="modalx-content">
+        <div class="modalx-header">
+          <span class="closex">&times;</span>
+          <div>
+            <h4>Please give us your Gesture feedback</h4>
+            <hr>
+           <!-- <video id="webcam" autoplay playsinline></video>
+            <canvas id="output_canvas"></canvas>-->
+<video id="webcam" width="320" height="180" autoplay playsinline></video>
+<canvas id="output_canvas" width="320" height="180"></canvas>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
+        <div class="modalx-body">
+          <div id="main_gesture">
+            <div class="LDimage-container">
+              <img src="assets/img/Like.jpg" alt="Like Gesture">
+              <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
+              <div id="gesture_output"></div>
+            </div>
+            <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
+            <script type="module" src="assets/MediaPipe_lib/div_actions.js"></script>
+
+            
+          </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
               <img src="assets/img/stars.png" alt="stars Gesture">
