--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <img src="assets/img/dislike.jpg" alt="Dislike Gesture">
             </div>
             <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-            <script type="module" src="assets/MediaPipe_lib/div_actions.js"></script>
+            <script src="assets/MediaPipe_lib/div_actions.js"></script>
           </div>
           <div id="star_gesture" style="display: none;">
             <div class="LDimage-container">
